Fix final video spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -590,7 +590,24 @@ section+section {
   max-width: 80vw;
   flex: 0 0 auto;
   width: 320px;
-  margin-right: 1rem;
+  margin-right: 2rem;
+}
+
+/* Mobile: full-bleed video scroll */
+@media (max-width: 767px) {
+  .home .videos .scroll-row {
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    padding-left: 1.5rem; /* Match total container + section padding (0.5 + 0.5 + extra) */
+    
+    .video-card:first-child {
+      margin-left: 0;
+    }
+    
+    .video-card:last-child {
+      margin-right: 1rem;
+    }
+  }
 }
 
 .read-more {
